--- a/paddle/api/test/CMakeLists.txt
+++ b/paddle/api/test/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_test(NAME test_swig_api
-    COMMAND bash ${PROJ_ROOT}/paddle/api/test/run_tests.sh ${PYTHON_EXECUTABLE})
+add_python_test(test_swig_api
+    testArguments.py testGradientMachine.py testMatrix.py testVector.py testTrain.py testTrainer.py)
