--- a/python/paddle/v2/plot/tests/CMakeLists.txt
+++ b/python/paddle/v2/plot/tests/CMakeLists.txt
@@ -1,3 +1,1 @@
-add_test(NAME test_ploter
-  COMMAND bash ${PROJ_ROOT}/python/paddle/v2/plot/tests/run_tests.sh
-  ${PYTHON_EXECUTABLE})
+add_python_test(test_ploter test_ploter.py)
